Fixed alignment of cartitems

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -12,9 +12,8 @@
   z-index: 5;
 
   .cart-items {
-    height: 240px;
-    display: flex;
-    flex-direction: column;
+    display: box;
+    height: auto;
     overflow: scroll;
   }
 
