--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -3,12 +3,12 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  height: auto;
-  max-height: 120px;
-  margin-bottom: 15px;
+  max-height: 150px;
+  padding-bottom: 20px;
 
   img {
     width: 30%;
+    height: 100%;
   }
 
   .item-details {
